[metadata]
name            = yard-fpga
author          = Benedek Racz
author-email    = betontalpfa@gmail.com
summary         = Yet Another Register Designer
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
project_urls =
    Source Code = https://github.com/raczben/yard
license = GPLv3

classifier = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)  
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords =
    FPGA, ASIC, AXI, AHB, IPIF, Wishbone, Whardware, register interface, code generator, Xilinx,
    Altera, Microblaze, ARM, Nios, C, TCL, Verilog, VHDL

[options]
install_requires =
    mako>=1.0
    PyYAML>=5.0
packages = yard
    
[options.entry_points]
console_scripts =
    yard = yard.__main__:main

[options.extras_require]
test =
    coverage
    setuptools>=38.0